plugins {
	id 'fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

repositories {
	// vlcj (video playback) and JNA are published on Maven Central.
	mavenCentral()
}

loom {
	accessWidenerPath = file("src/main/resources/pixelreel.accesswidener")
	splitEnvironmentSourceSets()

	mods {
		"pixelreel" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}

	runs {
		client {
			vmArgs "-Xms2G", "-Xmx4G"
		}
		server {
			vmArgs "-Xms1G", "-Xmx2G"
		}
	}
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings loom.officialMojangMappings()
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	// vlcj drives video/audio decoding through the locally installed VLC (libVLC).
	// The jars are bundled inside the mod jar so players only need VLC itself.
	implementation "uk.co.caprica:vlcj:${project.vlcj_version}"
	include "uk.co.caprica:vlcj:${project.vlcj_version}"
	include "uk.co.caprica:vlcj-natives:${project.vlcj_natives_version}"
	include "net.java.dev.jna:jna:${project.jna_version}"
	include "net.java.dev.jna:jna-platform:${project.jna_version}"
}

processResources {
	def version = project.version
	inputs.property "version", version

	filesMatching("fabric.mod.json") {
		expand "version": version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 17
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

jar {
	def projectName = project.name
	inputs.property "projectName", projectName

	from("LICENSE") {
		rename { "${it}_$projectName"}
	}
}

// Cursor/VS Code Java LS imports this Gradle project as folder+name, not rootProject.name.
// Patch Loom's generated launch.json so Run and Debug keeps working after `gradlew vscode`.
tasks.named("vscode").configure {
	doLast {
		def launchFile = file(".vscode/launch.json")
		if (!launchFile.exists()) return

		def javaProjectName = "${project.name}-${project.rootDir.name}"
		launchFile.text = launchFile.text.replace(
			"\"projectName\": \"${project.name}\"",
			"\"projectName\": \"${javaProjectName}\""
		)
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
